--- a/re-create-this/style.css
+++ b/re-create-this/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 100%;
+}
+
 body {
   /*
     width: 100%;
@@ -20,7 +24,7 @@ header ul {
   list-style-type: none;
   text-transform: uppercase;
   color: darkgray;
-  font-size: 25px;
+  font-size: 1.5625rem;
 }
 
 header li {
@@ -30,15 +34,16 @@ header li {
   padding-right: 0.1rem;
 }
 
-
-
 main {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+  max-width: 1200px;
+  margin: 0 auto;
+
   /* Keep adding new columns - even if theres is no content for them. content does not always take up full width */
   /*    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
   /* Don't add more columns than theres is content for. && +content "always" take full width */
-  padding: 10px;
+  padding: 1rem;
   grid-column-gap: 2rem;
   grid-row-gap: 5rem;
 }
@@ -64,9 +69,12 @@ article {
   background: white;
 }
 
-
-article h1 {
+article h2,
+article h3 {
   text-transform: uppercase;
+}
+
+article h2 {
   color: darkgray;
   letter-spacing: 3px;
 }
@@ -74,6 +82,7 @@ article h1 {
 article p {
   font-style: italic;
   color: darkgray;
+  border-bottom: 1px solid lightgrey;
 }
 
 article > img {
@@ -84,10 +93,7 @@ article > img {
   opacity: 80%;
 }
 
-
-
 article > button {
-
   margin-top: auto;
   background: white;
   color: brown;
